fix input overflow

--- a/_includes/styles/wordle-assistant.scss
+++ b/_includes/styles/wordle-assistant.scss
@@ -74,4 +74,5 @@
   width: 80%;
   font-size: 2rem;
   caret-color: transparent;
+  max-width: 38rem;
 }
